--- a/retardedSite/templates/index.html
+++ b/retardedSite/templates/index.html
@@ -26,7 +26,7 @@
   <body>
 
     <div class="container">
-        <h1>Hello, world!</h1>
+        <h1>{% if head %}{{head}}{% endif %}</h1>
         <p class="lead">
         {% if text %}
             {{text}}
